--- a/bower.json
+++ b/bower.json
@@ -8,13 +8,10 @@
         "bower_components"
     ],
     "dependencies": {
-        "swag": "~0.3.0",
         "lodash": "~1.3.1",
         "jquery": "~2.0.2",
-        "backbone": "~1.0.0",
         "normalize-css": "~2.1.2",
-        "h5bp-helpers": "~0.1.0",
-        "font-awesome": "~3.2.1"
+        "imagesloaded": "~3.1.0"
     },
     "overrides": {
         "backbone": {
