--- a/bower.json
+++ b/bower.json
@@ -14,11 +14,8 @@
     "imagesloaded": "~3.1.0",
     "jquery-ui": "~1.10.3",
     "jquery.scrollTo": "~1.4.9",
-    "jquery.localScroll": "~1.3.1",
     "jquery.easing": "~1.3.0",
-    "jparallax": "~2.0.3",
-    "skrollr": "~0.6.21",
-    "jquery-throttle-debounce": "*"
+    "jquery.stellar": "~0.6.2"
   },
   "overrides": {
     "backbone": {
