--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app",
+  "name": "magics-web-presentation",
   "version": "0.1.0",
   "main": "public/javascripts/app.js",
   "ignore": [
@@ -15,24 +15,8 @@
     "jquery-ui": "~1.10.3",
     "jquery.scrollTo": "~1.4.9",
     "jquery.easing": "~1.3.0",
-    "jquery.stellar": "~0.6.2"
-  },
-  "overrides": {
-    "backbone": {
-      "main": "backbone.js",
-      "dependencies": {
-        "lodash": "*",
-        "jquery": "*"
-      }
-    },
-    "font-awesome": {
-      "main": [
-        "font",
-        "css/font-awesome.css"
-      ]
-    },
-    "swag": {
-      "dependencies": {}
-    }
+    "jquery.stellar": "~0.6.2",
+    "navigator-detect.js": "~1.0.0",
+    "bootstrap": "~3.0.3"
   }
 }
