--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,6 @@
     "jquery.easing": "~1.3.0",
     "jquery.stellar": "~0.6.2",
     "navigator-detect.js": "~1.0.0",
-    "bootstrap": "~3.0.3",
-    "soundmanager2": "*"
+    "bootstrap": "~3.0.3"
   }
 }
